@@ -1,25 +1,20 @@
 package com.monocept.chatbot.service.impl;
 
 import com.monocept.chatbot.entity.Option;
+import com.monocept.chatbot.model.dto.NameIconDto;
 import com.monocept.chatbot.model.request.OptionPlaceholderRequest;
-import com.monocept.chatbot.model.request.UpdateOptionPlaceholderRequest;
 import com.monocept.chatbot.model.request.UpdationAcknowledgmentResponse;
-import com.monocept.chatbot.model.response.DeleteOptionResponse;
-import com.monocept.chatbot.model.response.UpdateOptionPlaceholderResponse;
 import com.monocept.chatbot.reposiotry.OptionRepository;
 import com.monocept.chatbot.service.OptionService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.function.Function;
+import java.util.List;
 import java.util.stream.Collectors;
-
 
 @Slf4j
 @Service
 public class OptionServiceImpl implements OptionService {
-
 
     private final OptionRepository optionRepository;
 
@@ -28,79 +23,64 @@ public class OptionServiceImpl implements OptionService {
     }
 
     @Override
-    public List<String> getAllOptions() {
-        return optionRepository.findOptionNames();
+    public List<NameIconDto> getAllOptions() {log.info("getAllOptions: Start fetching all option names");
+       return optionRepository.findOptionNames();
+
     }
 
     @Override
-    public List<Option> addOptions(List<String> options) {
-        log.info("addOptions : start {}" , options);
-        List<Option> list = options.stream().map(s -> Option.builder().name(s).build()).toList();
-        log.info("addOptions : options added data {}" , list);
-        return optionRepository.saveAll(list);
+    public List<Option> addOptions(OptionPlaceholderRequest optionPlaceholderRequest) {
+        log.info("addOptions: Start adding new options: {}", optionPlaceholderRequest);
+
+        List<Option> options = optionPlaceholderRequest.getData()
+                .stream()
+                .map(data -> Option.builder()
+                        .name(data.getName())
+                        .icon(data.getIcon())
+                        .build())
+                .collect(Collectors.toList());
+
+        List<Option> savedOptions = optionRepository.saveAll(options);
+        log.info("addOptions: Successfully added {} options", savedOptions.size());
+        return savedOptions;
     }
 
     @Override
-    public UpdateOptionPlaceholderResponse updateOption(List<UpdateOptionPlaceholderRequest> updateRequest) {
-        log.info("updateOption : start {}" , updateRequest);
-        int totalRecords = updateRequest.size();
-
-        Map<Boolean, List<UpdateOptionPlaceholderRequest>> result = updateRequest.stream()
-                .collect(Collectors.partitioningBy(update ->
-                        optionRepository.updateOptionByName(update.getNewValue(), update.getOldValue()) > 0
-                ));
-
-        log.info("updateOption : updated result {}" , result);
-
-        List<String> updatedRecords = result.get(true).stream()
-                .map(UpdateOptionPlaceholderRequest::getOldValue)
-                .toList();
-
-        log.info("updateOption : updated records {}" , updatedRecords);
-
-        List<String> unupdatedRecords = result.get(false).stream()
-                .map(UpdateOptionPlaceholderRequest::getOldValue)
-                .toList();
-
-        log.info("updateOption : unupdated records {}" , unupdatedRecords);
-
-        int totalUpdated = updatedRecords.size();
-        int totalUnupdated = unupdatedRecords.size();
-
-        log.info("updateOption : updated records count {}" , totalUpdated);
-        log.info("updateOption : unupdated records count {}" , totalUnupdated);
-
-        return new UpdateOptionPlaceholderResponse(totalRecords, totalUpdated, totalUnupdated, updatedRecords, unupdatedRecords);
+    public String updateOption(String name) {
+        log.info("updateOption: Start updating option with name: {}", name);
+        int rowsAffected = optionRepository.updatePlaceholderByName(name);
+        if (rowsAffected == 0) {
+            log.info("updateOption: No option found with name '{}' to update", name);
+            return "No matching option found for update.";
+        } else {
+            log.info("updateOption: Successfully updated option with name '{}'", name);
+            return "Option updated successfully.";
+        }
     }
 
     @Override
-    public DeleteOptionResponse deleteOption(List<String> name) {
-        log.info("deleteOption : start {} ", name);
-        int deletedCount = optionRepository.deleteByOptionNames(name);
-
-        // Return response based on whether any records were deleted
-        return new DeleteOptionResponse(
-                name.size(),
-                deletedCount > 0 ? List.of(String.valueOf(name)) : List.of(),
-                deletedCount > 0 ? "Records deleted successfully." : "No matching records found to delete."
-        );
+    public String deleteOption(String name) {
+        log.info("deleteOption: Start deleting option with name: {}", name);
+        int rowsAffected = optionRepository.deleteByPlaceholderName(name);
+        if (rowsAffected == 0) {
+            log.warn("deleteOption: No option found with name '{}' to delete", name);
+            return "No matching option found for deletion.";
+        } else {
+            log.info("deleteOption: Successfully deleted option with name '{}'", name);
+            return "Option deleted successfully.";
+        }
     }
 
     @Override
-    public UpdationAcknowledgmentResponse<Option> updateOptionsHandler(List<String> names) {
+    public UpdationAcknowledgmentResponse<Option> optionDataHandler(OptionPlaceholderRequest request) {
+        log.info("optionDataHandler: Start handling option data update");
+
+        log.info("optionDataHandler: Deleting all existing options");
         optionRepository.deleteAllOptions();
-        List<Option> options = this.addOptions(names);
-        return new UpdationAcknowledgmentResponse<>(options.size(),  options);
+
+        List<Option> options = this.addOptions(request);
+        log.info("optionDataHandler: Successfully added {} new option records", options.size());
+
+        return new UpdationAcknowledgmentResponse<>(options.size(), options);
     }
-
-    public Object optionDataHandler(OptionPlaceholderRequest request)  {
-        return switch (request.getMethodType().name().toLowerCase()) {
-            case "add" -> this.addOptions(request.getNames());
-            case "update" -> this.updateOption(request.getUpdateRequest());
-            case "delete" -> this.deleteOption(request.getNames());
-            default -> throw  new NoSuchElementException("Invalid option perform");
-        };
-    }
-
-
 }
